<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_chat"
        android:icon="@drawable/ic_add"
        android:title="@string/new_chat"
        android:tint="@color/text_secondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        android:tint="@color/text_secondary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        android:tint="@color/text_secondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />

</menu>
